--- a/package.json
+++ b/package.json
@@ -25,8 +25,8 @@
     "node-fetch": "^2.6.1",
     "npm": "^6.14.8",
     "regenerator-runtime": "^0.13.7",
-    "webpack": "^4.44.2",
-    "webpack-cli": "^3.3.5"
+    "webpack-cli": "^4.2.0",
+    "webpack": "^5.6.0"
   },
   "devDependencies": {
     "@babel/core": "^7.12.3",
@@ -38,7 +38,7 @@
     "clean-webpack-plugin": "^3.0.0",
     "cors": "^2.8.5",
     "css-loader": "^5.0.1",
-    "html-webpack-plugin": "^3.2.0",
+    "html-webpack-plugin": "^4.5.0",
     "jest": "^26.6.3",
     "mini-css-extract-plugin": "^1.3.1",
     "node-sass": "^5.0.0",
@@ -46,7 +46,8 @@
     "sass-loader": "^10.1.0",
     "style-loader": "^2.0.0",
     "supertest": "^6.0.1",
-    "terser-webpack-plugin": "^5.0.3",
+    "terser-webpack-plugin": "^4.2.3",
+    "webpack-dev-middleware": "^4.0.2",
     "webpack-dev-server": "^3.11.0",
     "workbox-webpack-plugin": "^5.1.4"
   }
